<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_border_white"
    tools:context=".CreateAccount">

    <View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/white_wave"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_wave_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView2" />

    <View
        android:id="@+id/topView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addProfileAcc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/blankpfp"
        android:src="@drawable/ic_baseline_person_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/topView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/createAcc"
        android:textColor="@color/lightRed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/white_wave"
        app:layout_constraintEnd_toEndOf="@+id/topView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <EditText
        android:id="@+id/createEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_border_white"
        android:drawableStart="@drawable/ic_email_white"
        android:drawableLeft="@drawable/ic_email_white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/createEmailHint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white_wave" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_border_white"
        android:drawableStart="@drawable/ic_lock_white"
        android:drawableLeft="@drawable/ic_lock_white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/createPassHint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createEmail" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_border_white"
        android:drawableStart="@drawable/ic_lock_white"
        android:drawableLeft="@drawable/ic_lock_white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPassword" />

    <Button
        android:id="@+id/createAcc2"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/round_border_white"
        android:text="@string/finishCreation"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.274" />

</androidx.constraintlayout.widget.ConstraintLayout>