<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <View
        android:id="@+id/pass_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/topview_background"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/topview_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pass_background"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lock_open" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textColor="@color/lightRed"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topview_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/white_wave2"
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_wave_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topview_background" />

    <EditText
        android:id="@+id/restorepassEmail"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_border_white"
        android:drawableStart="@drawable/ic_email_white"
        android:drawableLeft="@drawable/ic_email_white"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/white_wave2" />

    <Button
        android:id="@+id/sendRecoveryMail"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:background="@drawable/transparent_bg_bordered"
        android:text="@string/sendrecoveryMail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restorepassEmail"
        app:layout_constraintVertical_bias="0.171" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/pass_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendRecoveryMail"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>